--- a/Main/Application/templates/Application/exercise.html
+++ b/Main/Application/templates/Application/exercise.html
@@ -303,39 +303,7 @@
         </div>
     </section>
 
-    <section id="section-exercise" class="container-fluid">
-        <h1 class="exercise-heading">Other Exercises you <span>must Solve</span></h1>
-        <div class="exercise">
-            <div class="exercise__content">
-                <h3 class="exercise__content--btn"><</h3>
-                <div class="exercise__content--box">
-                    <div class="exercise__content--box-item">
-                        <img class="exercise__content--box-item-img" src="{% static 'images/pradeep.png' %}" alt="">
-                        <button class="exercise__content--box-item-btn">Solve Now</button>
-                        <h3 class="exercise__content--box-item-text">EXERCISE 1.4</h3>
-                    </div>
-                    <div class="exercise__content--box-item">
-                        <img class="exercise__content--box-item-img" src="{% static 'images/pradeep.png' %}" alt="">
-                        <button class="exercise__content--box-item-btn">Solve Now</button>
-                        <h3 class="exercise__content--box-item-text">EXERCISE 1.4</h3>
-                    </div>
-                    <div class="exercise__content--box-item">
-                        <img class="exercise__content--box-item-img" src="{% static 'images/pradeep.png' %}" alt="">
-                        <button class="exercise__content--box-item-btn">Solve Now</button>
-                        <h3 class="exercise__content--box-item-text">EXERCISE 1.4</h3>
-                    </div>
-                    <div class="exercise__content--box-item">
-                        <img class="exercise__content--box-item-img" src="{% static 'images/pradeep.png' %}" alt="">
-                        <button class="exercise__content--box-item-btn">Solve Now</button>
-                        <h3 class="exercise__content--box-item-text">EXERCISE 1.4</h3>
-                    </div>
-                </div>
-                <h3 class="exercise__content--btn">></h3>
-            </div>
-        </div>
-    </section>
-
-    <section id="section-sub" class="container-fluid">
+    <section id="section-sub" class="container-fluid" style="margin-top: 10rem;">
         <h1 class="sub-heading1">Other Math Books you <span>Must Have</span></h1>
         <div class="sub">
             <div class="sub__content">
