--- a/Main/Application/templates/Application/profile.html
+++ b/Main/Application/templates/Application/profile.html
@@ -3,6 +3,7 @@
 
 {% block content %}
     <section id="section-profile" class="container-fluid">
+        <img class="state-img3" src="{% static 'images/ellipses.png' %}" alt="">
         <div class="profile">
             <div class="profile-img">
                 <img class="profile-img__pic" src="{% static 'images/group.jpg' %}" alt="">
@@ -57,8 +58,106 @@
             <a class="cbse__link" href="">View Course Page</a>
             <a class="cbse__link" href="">Tutor's Free Class</a>
         </div>
-        <div class="cbse__content">
+        <div class="cbseitems">
+            <div class="mcbse">
+                <h1 class="mcbse__title">Maths</h1>
+                <div class="mcbse__content">
+                    <button class="mcbse__content--btn">NCERT</button>
+                    <button class="mcbse__content--btn">RD SHARMA</button>
+                    <button class="mcbse__content--btn">KC SINHA</button>
+                    <button class="mcbse__content--btn">SL LONEY</button>
+                    <button class="mcbse__content--btn">RS AGGARWAL</button>
+                    <button class="mcbse__content--btn">HALL & KNIGHT</button>
+                </div>
+            </div>
+            <div class="mcbse">
+                <h1 class="mcbse__title">Maths</h1>
+                <div class="mcbse__content">
+                    <button class="mcbse__content--btn">NCERT</button>
+                    <button class="mcbse__content--btn">RD SHARMA</button>
+                    <button class="mcbse__content--btn">KC SINHA</button>
+                    <button class="mcbse__content--btn">SL LONEY</button>
+                    <button class="mcbse__content--btn">RS AGGARWAL</button>
+                    <button class="mcbse__content--btn">HALL & KNIGHT</button>
+                </div>
+            </div>
+            <div class="mcbse">
+                <h1 class="mcbse__title">Maths</h1>
+                <div class="mcbse__content">
+                    <button class="mcbse__content--btn">NCERT</button>
+                    <button class="mcbse__content--btn">RD SHARMA</button>
+                    <button class="mcbse__content--btn">KC SINHA</button>
+                    <button class="mcbse__content--btn">SL LONEY</button>
+                    <button class="mcbse__content--btn">RS AGGARWAL</button>
+                    <button class="mcbse__content--btn">HALL & KNIGHT</button>
+                </div>
+            </div>
+            <div class="mcbse">
+                <h1 class="mcbse__title">Maths</h1>
+                <div class="mcbse__content">
+                    <button class="mcbse__content--btn">NCERT</button>
+                    <button class="mcbse__content--btn">RD SHARMA</button>
+                    <button class="mcbse__content--btn">KC SINHA</button>
+                    <button class="mcbse__content--btn">SL LONEY</button>
+                    <button class="mcbse__content--btn">RS AGGARWAL</button>
+                    <button class="mcbse__content--btn">HALL & KNIGHT</button>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section id="section-cbse" class="container-fluid">
+        <div class="cbse">
+            <h1 class="cbse__heading">JEE Mains Course</h1>
+            <a class="cbse__link" href="">View Course Page</a>
+            <a class="cbse__link" href="">Tutor's Free Class</a>
+        </div>
+        <div class="cbseitems">
+            <img class="state-img1" src="{% static 'images/ellipses.png' %}" alt="">
+            <div class="mcbse">
+                <h1 class="mcbse__title">Maths</h1>
+                <div class="mcbse__content">
+                    <button class="mcbse__content--btn">NCERT</button>
+                    <button class="mcbse__content--btn">RD SHARMA</button>
+                    <button class="mcbse__content--btn">KC SINHA</button>
+                    <button class="mcbse__content--btn">SL LONEY</button>
+                    <button class="mcbse__content--btn">RS AGGARWAL</button>
+                    <button class="mcbse__content--btn">HALL & KNIGHT</button>
+                </div>
+            </div>
+            <div class="mcbse">
+                <h1 class="mcbse__title">Maths</h1>
+                <div class="mcbse__content">
+                    <button class="mcbse__content--btn">NCERT</button>
+                    <button class="mcbse__content--btn">RD SHARMA</button>
+                    <button class="mcbse__content--btn">KC SINHA</button>
+                    <button class="mcbse__content--btn">SL LONEY</button>
+                    <button class="mcbse__content--btn">RS AGGARWAL</button>
+                    <button class="mcbse__content--btn">HALL & KNIGHT</button>
+                </div>
+            </div>
+            <div class="mcbse">
+                <h1 class="mcbse__title">Maths</h1>
+                <div class="mcbse__content">
+                    <button class="mcbse__content--btn">NCERT</button>
+                    <button class="mcbse__content--btn">RD SHARMA</button>
+                    <button class="mcbse__content--btn">KC SINHA</button>
+                    <button class="mcbse__content--btn">SL LONEY</button>
+                    <button class="mcbse__content--btn">RS AGGARWAL</button>
+                    <button class="mcbse__content--btn">HALL & KNIGHT</button>
+                </div>
+            </div>
+            <div class="mcbse">
+                <h1 class="mcbse__title">Maths</h1>
+                <div class="mcbse__content">
+                    <button class="mcbse__content--btn">NCERT</button>
+                    <button class="mcbse__content--btn">RD SHARMA</button>
+                    <button class="mcbse__content--btn">KC SINHA</button>
+                    <button class="mcbse__content--btn">SL LONEY</button>
+                    <button class="mcbse__content--btn">RS AGGARWAL</button>
+                    <button class="mcbse__content--btn">HALL & KNIGHT</button>
+                </div>
+            </div>
         </div>
     </section>
 {% endblock content %}
