--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -3237,6 +3237,60 @@ nav {
   .question1__content--next {
     font-size: 1.2rem; } }
 
+.result-heading {
+  font-size: 2.5rem;
+  font-family: 'Poppins',sans-serif;
+  color: #4B4B4B;
+  font-weight: 700;
+  margin-top: 5rem; }
+
+.result-subheading {
+  font-size: 2rem;
+  font-family: 'Poppins',sans-serif;
+  color: rgba(75, 75, 75, 0.8);
+  font-weight: 500; }
+
+.filter {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 3rem;
+  border: solid 0.1rem #DE0B38;
+  padding: 1rem 1rem;
+  border-radius: 1rem; }
+  .filter__heading {
+    color: #DE0B38;
+    font-size: 2rem;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 700;
+    margin-bottom: 1rem; }
+  .filter__items {
+    display: grid;
+    grid-template-columns: repeat(10, max-content);
+    column-gap: 2rem; }
+    .filter__items--btn {
+      background-color: transparent;
+      font-size: 1.5rem;
+      padding: .2rem 1rem;
+      font-family: 'Poppins',sans-serif;
+      border: 0.1rem solid #4B4B4B;
+      border-radius: .5rem; }
+      .filter__items--btn:hover, .filter__items--btn:focus, .filter__items--btn:active {
+        background-color: #D60B3C;
+        color: white;
+        outline: none; }
+      .filter__items--btn span {
+        font-size: 1rem; }
+
+.result-img1 {
+  width: 45rem;
+  align-self: end;
+  margin-bottom: -4rem;
+  cursor: pointer;
+  transition: all .2s; }
+  .result-img1:hover {
+    transform: translateY(-1rem); }
+
 .say-heading {
   text-align: center;
   font-size: 3.5rem;
@@ -4426,3 +4480,10 @@ nav {
   margin-top: 7.5rem;
   height: fit-content;
   position: relative; }
+
+#section-result {
+  width: 90%;
+  height: fit-content;
+  position: relative;
+  display: grid;
+  grid-template-columns: 72% 28%; }
