--- a/Main/Application/templates/Application/result.html
+++ b/Main/Application/templates/Application/result.html
@@ -24,5 +24,126 @@
         </div>
         <img class="result-img1" src="{% static 'images/Group 69440@2x.png' %}" alt="">
     </section>
+
+    <section id="section-answer" class="container-fluid">
+        <div class="answer">
+            <div class="answer__content">
+                <h3 class="answer__content--title">Class name > Subject > Book Name > Chapter > Exercise > Question</h3>
+            
+                <div class="answer__content--box">
+                    <div class="answer__content--box-item">
+                        <h3 class="answer__content--box-item-title">Question</h3>
+                        <p class="answer__content--box-item-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                        <p class="answer__content--box-item-para" style="margin-top: 2.5rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                    </div>
+                    <img class="answer__content--box-img" src="{% static 'images/tablet.png' %}" alt="">
+                </div>
+            </div>
+            <div class="answer__content">
+                <h3 class="answer__content--title">Class name > Subject > Book Name > Chapter > Exercise > Question</h3>
+            
+                <div class="answer__content--box">
+                    <div class="answer__content--box-item">
+                        <h3 class="answer__content--box-item-title">Question</h3>
+                        <p class="answer__content--box-item-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                        <p class="answer__content--box-item-para" style="margin-top: 2.5rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                    </div>
+                    <img class="answer__content--box-img" src="{% static 'images/tablet.png' %}" alt="">
+                </div>
+            </div>
+            <div class="answer__content">
+                <h3 class="answer__content--title">Class name > Subject > Book Name > Chapter > Exercise > Question</h3>
+            
+                <div class="answer__content--box">
+                    <div class="answer__content--box-item">
+                        <h3 class="answer__content--box-item-title">Question</h3>
+                        <p class="answer__content--box-item-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                        <p class="answer__content--box-item-para" style="margin-top: 2.5rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                    </div>
+                    <img class="answer__content--box-img" src="{% static 'images/tablet.png' %}" alt="">
+                </div>
+            </div>
+
+            <h1 class="answer__title">Related Questions</h1>
+
+            <div class="answer__content">
+                <h3 class="answer__content--title">Class name > Subject > Book Name > Chapter > Exercise > Question</h3>
+            
+                <div class="answer__content--box">
+                    <div class="answer__content--box-item">
+                        <h3 class="answer__content--box-item-title">Question</h3>
+                        <p class="answer__content--box-item-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                        <p class="answer__content--box-item-para" style="margin-top: 2.5rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                    </div>
+                    <img class="answer__content--box-img" src="{% static 'images/tablet.png' %}" alt="">
+                </div>
+            </div>
+            <div class="answer__content">
+                <h3 class="answer__content--title">Class name > Subject > Book Name > Chapter > Exercise > Question</h3>
+            
+                <div class="answer__content--box">
+                    <div class="answer__content--box-item">
+                        <h3 class="answer__content--box-item-title">Question</h3>
+                        <p class="answer__content--box-item-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                        <p class="answer__content--box-item-para" style="margin-top: 2.5rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                    </div>
+                    <img class="answer__content--box-img" src="{% static 'images/tablet.png' %}" alt="">
+                </div>
+            </div>
+            <div class="answer__content">
+                <h3 class="answer__content--title">Class name > Subject > Book Name > Chapter > Exercise > Question</h3>
+            
+                <div class="answer__content--box">
+                    <div class="answer__content--box-item">
+                        <h3 class="answer__content--box-item-title">Question</h3>
+                        <p class="answer__content--box-item-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                        <p class="answer__content--box-item-para" style="margin-top: 2.5rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores culpa dolore blanditiis fugiat laudantium corporis fugit doloribus quas? Odio incidunt sapiente quos maxime animi voluptatibus vitae. Doloremque saepe nobis animi!</p>
+                    </div>
+                    <img class="answer__content--box-img" src="{% static 'images/tablet.png' %}" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="answer__solved">
+            <div class="answer__solved--box">
+                <h1 class="answer__solved--box-heading">Explore our</h1>
+                <h1 class="answer__solved--box-heading">Solved Books !</h1>
+                <div class="answer__solved--box-items">
+                    <button class="answer__solved--box-items-btn">NEET</button>
+                    <button class="answer__solved--box-items-btn">JEE <span>Mains</span></button>
+                    <button class="answer__solved--box-items-btn">NEET <span>Adv</span></button>
+                    <button class="answer__solved--box-items-btn">Class 6</button>
+                    <button class="answer__solved--box-items-btn">Class 7</button>
+                    <button class="answer__solved--box-items-btn">Class 8</button>
+                    <button class="answer__solved--box-items-btn">Class 9</button>
+                    <button class="answer__solved--box-items-btn">Class 10</button>
+                    <button class="answer__solved--box-items-btn">Class 11</button>
+                    <button class="answer__solved--box-items-btn" style="grid-column:2 / 3;">Class 12</button>
+                </div>
+                <div class="answer__solved--box--books">
+                    <div class="answer__solved--box--books-pic">
+                        <img class="answer__solved--box--books-pic-img" src="{% static 'books/11TH/91Gb3OCDHBL.jpg' %}" alt="">
+                        <button class="answer__solved--box--books-pic-btn">Solve Now</button>
+                        <h3 class="answer__solved--box--books-pic-text">RD SHARMA</h3>
+                    </div>
+                    <div class="answer__solved--box--books-pic">
+                        <img class="answer__solved--box--books-pic-img" src="{% static 'books/11TH/91Gb3OCDHBL.jpg' %}" alt="">
+                        <button class="answer__solved--box--books-pic-btn">Solve Now</button>
+                        <h3 class="answer__solved--box--books-pic-text">HC VERMA</h3>
+                    </div>
+                    <div class="answer__solved--box--books-pic">
+                        <img class="answer__solved--box--books-pic-img" src="{% static 'books/11TH/91Gb3OCDHBL.jpg' %}" alt="">
+                        <button class="answer__solved--box--books-pic-btn">Solve Now</button>
+                        <h3 class="answer__solved--box--books-pic-text">N. AWASTHI</h3>
+                    </div>
+                    <div class="answer__solved--box--books-pic">
+                        <img class="answer__solved--box--books-pic-img" src="{% static 'books/11TH/91Gb3OCDHBL.jpg' %}" alt="">
+                        <button class="answer__solved--box--books-pic-btn">Solve Now</button>
+                        <h3 class="answer__solved--box--books-pic-text">ERRORLESS</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
   
 {% endblock content %}
