--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -86,6 +86,7 @@ body {
     font-size: 1.5rem;
     font-weight: 600; }
   .answer__content--box {
+    background-color: white;
     box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.1);
     padding: 2rem;
     display: grid;
@@ -1206,6 +1207,97 @@ body {
       font-size: 2.5rem;
       font-family: 'Poppins',sans-serif;
       font-weight: 600; }
+
+.find {
+  box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.3);
+  padding: 2rem;
+  border-radius: 1rem; }
+  .find__heading {
+    font-family: 'Poppins',sans-serif;
+    font-size: 3rem;
+    font-weight: 700;
+    color: #D60B3C;
+    text-align: center; }
+  .find__sub {
+    margin-top: 1.5rem;
+    font-size: 2rem;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 500;
+    text-align: center; }
+  .find__or {
+    position: relative;
+    margin-top: 4rem;
+    margin-bottom: 4rem; }
+    .find__or--line1 {
+      position: absolute;
+      border: 0.15rem solid #D60B3C;
+      width: 40rem;
+      background-color: #D60B3C;
+      left: 3rem;
+      top: 0rem; }
+    .find__or--line2 {
+      position: absolute;
+      border: 0.15rem solid #D60B3C;
+      width: 40rem;
+      background-color: #D60B3C;
+      right: 3rem;
+      top: 0rem; }
+    .find__or--text {
+      font-family: 'Poppins',sans-serif;
+      font-size: 2rem;
+      font-weight: 700;
+      color: #D60B3C;
+      text-align: center; }
+  .find__visit {
+    text-align: center;
+    font-size: 2.5rem;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 700;
+    color: #1E4190; }
+  .find__items {
+    background-color: white;
+    border: 0.2rem solid #D60B3C;
+    padding: 2rem;
+    border-radius: .5rem; }
+    .find__items--heading {
+      font-family: 'Poppins',sans-serif;
+      font-weight: 700;
+      color: #D60B3C;
+      font-size: 2rem; }
+    .find__items--box {
+      display: grid;
+      grid-template-columns: repeat(10, 1fr);
+      column-gap: 1rem; }
+      .find__items--box-btn {
+        margin-top: 1rem;
+        font-family: 'Poppins',sans-serif;
+        background-color: transparent;
+        font-size: 1.4rem;
+        color: #4B4B4B;
+        padding: .2rem .5rem;
+        border-radius: .5rem;
+        border: 0.1rem solid #4B4B4B; }
+        .find__items--box-btn span {
+          font-size: 1rem; }
+        .find__items--box-btn:hover, .find__items--box-btn:focus, .find__items--box-btn:active {
+          outline: none;
+          background-color: #D60B3C;
+          color: white; }
+  .find__btn {
+    margin-top: 3rem;
+    font-size: 2.5rem;
+    font-family: 'Poppins',sans-serif;
+    color: white;
+    background-color: #D60B3C;
+    border: none;
+    border-radius: .8rem;
+    padding: .4rem 3rem;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%); }
+    .find__btn:hover, .find__btn:focus, .find__btn:active {
+      outline: none;
+      filter: brightness(90%); }
 
 .footer1-connect {
   margin-bottom: 4rem; }
@@ -3358,6 +3450,7 @@ nav {
   font-weight: 500; }
 
 .filter {
+  background-color: white;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
@@ -4587,6 +4680,18 @@ nav {
   margin-top: 7.5rem;
   height: fit-content;
   position: relative; }
+
+.result-ellipse1 {
+  position: absolute;
+  top: -200%;
+  right: -80%;
+  z-index: -1; }
+
+.result-ellipse2 {
+  position: absolute;
+  top: -70%;
+  left: -80%;
+  z-index: -1; }
 
 #section-result {
   width: 95%;
