--- a/Main/Application/templates/Application/result.html
+++ b/Main/Application/templates/Application/result.html
@@ -173,6 +173,7 @@
                 </div>
             </div>
             <button class="find__btn">Check out video Library</button>
+            <img class="find-ellipse3" src="{% static 'images/ellipses.png' %}" alt="">
         </div>
     </section>
   
